<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Fragen</string>
    <string name="title_Listening">Hören</string>
    <string name="title_Translation">Übersetzung</string>
    <string name="Translation">Übersetzung</string>
    <string name="Arabic" translatable="false">Arabisch</string>
    <string name="Germany">Deutsch</string>
    <string name="Translate">Übersetzen</string>
    <string name="Training">Wählen Sie einen Fragentyp aus</string>
    <string name="Listening">Zuhören und Aussprache</string>
    <string name="Complete">Vollständig</string>
    <string name="Match">Übereinstimmen</string>
    <string name="Rearrange">Neu anordnen</string>
    <string name="Choose">Wählen</string>
    <string name="Nouns">Substantive</string>
    <string name="Verbs">Verben</string>
    <string name="Terms">Bedingungen</string>
    <string name="Other">Andere</string>
    <string name="Next">Zurück</string>
    <string name="Show_Result">Zeige Ergebnis</string>
    <string name="Finish">Beenden</string>
    <string name="Restart">Neu starten</string>
    <string name="Submit">Einreichen</string>
    <string name="Note">Hinweis: Wenn es mehr als eine Antwort gibt, trennen Sie diese durch ein „-“.</string>




</resources>