<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Questions_page.Questions_page_Fragment"
    android:background="@color/white"

    >
    <ImageView
        android:id="@+id/green_cicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greencicle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/W1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Training"
        android:textColor="@color/greeen1"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="38dp"
        android:layout_marginStart="16dp"
        />

    <Button
        android:id="@+id/choose_button"
        android:layout_width="153dp"
        android:layout_height="138dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Choose"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:textSize="23sp"
        android:layout_marginTop="224dp"
        android:layout_marginStart="21dp"

        />
    <Button
        android:id="@+id/rearrange_button"
        android:layout_width="153dp"
        android:layout_height="138dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Rearrange"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:textSize="23sp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="21dp"

        />
    <Button
        android:id="@+id/match_button"
        android:layout_width="153dp"
        android:layout_height="138dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Match"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen2"
        android:textSize="20sp"
        android:layout_marginTop="429dp"
        android:layout_marginStart="21dp"

        />
    <Button
        android:id="@+id/complete_button"
        android:layout_width="153dp"
        android:layout_height="138dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Complete"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_background"
        android:backgroundTint="@color/greeen"
        android:textSize="23sp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="21dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>